// Copyright 2025 Supabase, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package consensus;

import "consensusdata.proto";

option go_package = "github.com/multigres/multigres/go/pb/consensus";

// MultiPoolerConsensus provides consensus APIs for leader appointment
service MultiPoolerConsensus {
  // Appointment Protocol
  rpc BeginTerm(consensusdata.BeginTermRequest) returns (consensusdata.BeginTermResponse);

  // Status and Health
  rpc Status(consensusdata.StatusRequest) returns (consensusdata.StatusResponse);
  rpc GetLeadershipView(consensusdata.LeadershipViewRequest) returns (consensusdata.LeadershipViewResponse);

  // WAL and Replication
  rpc GetWALPosition(consensusdata.GetWALPositionRequest) returns (consensusdata.GetWALPositionResponse);
  rpc CanReachPrimary(consensusdata.CanReachPrimaryRequest) returns (consensusdata.CanReachPrimaryResponse);
}
